--- a/style/style.scss
+++ b/style/style.scss
@@ -3,3 +3,202 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+$container: 1210px;
+$padding: 20px;
+$primary: #FF4343;
+$title: #2D3033;
+$text: #6C7279;
+$tablet: 1024px;
+$mobile: 767px;
+$text-color-primary: #fff;
+
+body {
+  font-family: "Raleway", sans-serif;
+}
+
+.container {
+  max-width: $container;
+  padding: 0 $padding;
+  margin: 0 auto;
+}
+.banner{
+  background-image: url(../src/banner.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  padding: 230px 0 120px;
+
+  @media (max-width: $tablet){
+    padding: 257px 0 126px;
+  }
+
+  @media (max-width: $mobile){
+    padding: 106px 0 52px;
+  }
+  
+  &::before{
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: #252B49;
+    opacity: 0.8;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  &__container{
+    z-index: 1;
+    position: relative;
+    text-align: center;
+  }
+
+  &__title {
+    font-size: 64px;
+    line-height: 75px;
+    color: $text-color-primary;
+    font-weight: 900;
+    margin-bottom: 31px;
+    
+    @media (max-width: $tablet){
+      font-size: 48px;
+      line-height: 56px;
+      margin-bottom: 62px;
+    }
+
+     @media (max-width: $mobile){
+      font-size: 36px;
+      line-height: 42px;
+      margin-bottom: 41px;
+    }
+  }
+
+  &__subtitle {
+    font-size: 24px;
+    line-height: 28px;
+    color: $text-color-primary;
+    margin-bottom: 80px;
+
+    @media (max-width: $tablet){
+      font-size: 18px;
+      line-height: 21px;
+      margin-bottom: 92px;
+    }
+
+    @media (max-width: $mobile){
+      font-size: 14px;
+      line-height: 16px;
+      margin-bottom: 59px;
+    }
+  }
+
+  &__btn{
+    font-size: 24px;
+    line-height: 28px;
+    color: $text-color-primary;
+    font-weight: 900;
+    text-transform: uppercase;
+    background-color: $primary;
+    padding: 26px;
+    display: block;
+    max-width: 370px;
+    text-decoration: none;
+    margin: 0 auto;
+
+    @media (max-width: $tablet){
+      max-width: 314px;
+      padding: 25px;
+    }
+
+    @media (max-width: $mobile){
+      max-width: 280px;
+      padding: 17px;
+    }
+  }
+}
+
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 38px 0 36px;
+  border-bottom: 1px solid #babbc5;
+
+  @media (max-width: $tablet){
+    padding: 37px 0;
+  }
+
+  @media (max-width: $mobile){
+    padding: 19px 0;
+    border-bottom: none;
+  }
+
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .logo {
+    max-width: 184px;
+    display: flex;
+
+  @media (max-width: $tablet){
+    max-width: 181px;
+  }
+
+  @media (max-width: $mobile){
+    max-width: 109px;
+  }
+
+  }
+  &__menu{
+    background-color: transparent;
+    border: none;
+    width: 25px;
+    height: 18px;
+    display: none;
+
+    @media (max-width: $mobile){
+    display: flex;
+  }
+  }
+}
+
+.nav {
+  display: flex;
+  gap: 40px;
+
+  @media (max-width: $tablet){
+  gap: 25px;
+  }
+
+
+  &__link {
+    color: #fff;
+    text-decoration: none;
+    font-size: 13px;
+    line-height: 15px;
+    opacity: .8;
+    transition: opacity .3s;
+    text-transform: uppercase;
+    font-weight: 700;
+
+    @media (max-width: $tablet){
+      font-size: 12px;
+      line-height: 14px;
+    }
+
+    &:hover {       
+      opacity: 1;
+    }
+  }
+
+  @media (max-width:$mobile) {
+    display: none;
+  }
+}
+
