--- a/style/style.scss
+++ b/style/style.scss
@@ -202,3 +202,85 @@ body {
   }
 }
 
+.features{
+  padding: 116px 0;
+
+   @media (max-width: $tablet){
+    padding: 79px 0;
+  }
+
+  @media (max-width: $mobile){
+    padding: 40px 0 35px;
+  }
+
+  &__container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 31px;
+    row-gap: 89px;
+
+    @media (max-width: $tablet){
+      column-gap: 20px;
+      row-gap: 50px;
+    }
+
+    @media (max-width: $mobile){
+      grid-template-columns: 1fr;
+      row-gap: 41px;
+    }
+  }
+}
+
+.feature{
+  text-align: center;
+  
+  &__wrapper-image{
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto 51px;
+
+     @media (max-width: $tablet){
+      width: 85px;
+      height: 84px;
+      margin: 0 auto 45px;
+    }
+
+    @media (max-width: $mobile){
+      width: 75px;
+      height: 74px;
+      margin: 0 auto 38px;
+    }
+  }
+
+  &__title{
+    font-size: 24px;
+    line-height: 28px;
+    font-weight: 900;
+    margin-bottom: 42px;
+    text-transform: uppercase;
+
+    @media (max-width: $tablet){
+      font-size: 18px;
+      line-height: 21px;
+      margin-bottom: 24px;
+    }
+
+    @media (max-width: $mobile){
+      margin-bottom: 8px;
+    }
+  }
+
+  &__text{
+    font-size: 18px;
+    line-height: 21px;
+    color: $text;
+
+    @media (max-width: $tablet){
+      font-size: 14px;
+      line-height: 16px;
+    }
+  }
+}
