--- a/style/style.scss
+++ b/style/style.scss
@@ -106,6 +106,12 @@ body {
     max-width: 370px;
     text-decoration: none;
     margin: 0 auto;
+    transition: all 0.2s linear;
+
+    &:hover {       
+      background-color: #b71013;
+      transform: scale(1.05);
+    }
 
     @media (max-width: $tablet){
       max-width: 314px;
@@ -186,6 +192,11 @@ body {
     transition: opacity .3s;
     text-transform: uppercase;
     font-weight: 700;
+    transition: all 0.2s ease;
+
+    &:hover {       
+      transform: scale(1.1);
+    }
 
     @media (max-width: $tablet){
       font-size: 12px;
@@ -281,6 +292,97 @@ body {
     @media (max-width: $tablet){
       font-size: 14px;
       line-height: 16px;
+    }
+  }
+}
+
+.works{
+  &__container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    max-width: 100%;
+    padding: 0;
+
+    @media (max-width: $tablet){
+    max-width: 100%;
+    padding: 0;
+    }
+
+    @media (max-width: $mobile){
+    max-width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0;
+    }
+  }
+}
+
+.project{
+  &__content{
+    aspect-ratio: 378/340;
+    position: relative;
+    display:flex
+  }
+
+  &__image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  &__name{
+    position: absolute;
+    left: 0; 
+    top: 0; 
+    width: 100%;
+    height: 100%; 
+    padding: 10px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background: rgba(255, 67, 67, 0.8);
+    opacity: 0;
+    transition: all 0.4s linear;
+    flex-direction: column;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+
+  &__title{
+    font-size: 24px;
+    line-height: 28px;
+    font-weight: 900;
+    text-transform: uppercase;
+    margin-bottom: 36px;
+
+    @media (max-width: $tablet){
+    font-size: 18px;
+    line-height: 21px;
+    margin-bottom: 23px;
+    }
+
+    @media (max-width: $mobile){
+    font-size: 18px;
+    line-height: 21px;
+    margin-bottom: 7px;
+    }
+  }
+
+  &__text{
+    font-size: 18px;
+    line-height: 21px;
+
+    @media (max-width: $tablet){
+    font-size: 14px;
+    line-height: 16px;
+    }
+
+    @media (max-width: $mobile){
+    font-size: 14px;
+    line-height: 16px;
     }
   }
 }
