--- a/style/style.css
+++ b/style/style.css
@@ -37,7 +37,7 @@ body {
   display: block;
   width: 100%;
   height: 100%;
-  background: #252B49;
+  background: #252b49;
   opacity: 0.8;
   position: absolute;
   top: 0;
@@ -95,7 +95,7 @@ body {
   color: #fff;
   font-weight: 900;
   text-transform: uppercase;
-  background-color: #FF4343;
+  background-color: #ff4343;
   padding: 26px;
   display: block;
   max-width: 370px;
@@ -290,7 +290,7 @@ body {
 .feature__text {
   font-size: 18px;
   line-height: 21px;
-  color: #6C7279;
+  color: #6c7279;
 }
 @media (max-width: 1024px) {
   .feature__text {
@@ -386,4 +386,160 @@ body {
     font-size: 14px;
     line-height: 16px;
   }
+}
+
+.persons {
+  padding: 114px 0;
+}
+.persons__container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+}
+@media (max-width: 1024px) {
+  .persons__container {
+    -moz-column-gap: 25px;
+         column-gap: 25px;
+  }
+}
+@media (max-width: 767px) {
+  .persons__container {
+    grid-template-columns: 1fr;
+    row-gap: 56px;
+  }
+}
+
+.people__content {
+  aspect-ratio: 270/270;
+}
+.people__image {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-bottom: 31px;
+}
+@media (max-width: 1024px) {
+  .people__image {
+    margin-bottom: 25px;
+  }
+}
+@media (max-width: 767px) {
+  .people__image {
+    margin-bottom: 25px;
+  }
+}
+.people__list {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  -moz-column-gap: 6px;
+       column-gap: 6px;
+  list-style: none;
+  display: flex;
+  margin-bottom: 114px;
+}
+@media (max-width: 1024px) {
+  .people__list {
+    -moz-column-gap: 4px;
+         column-gap: 4px;
+    margin-bottom: 78px;
+  }
+}
+@media (max-width: 767px) {
+  .people__list {
+    -moz-column-gap: 5px;
+         column-gap: 5px;
+    margin-bottom: 49px;
+  }
+}
+.people__name {
+  font-size: 24px;
+  line-height: 28px;
+  font-weight: 700;
+  margin-bottom: 6px;
+  color: #2d3033;
+}
+@media (max-width: 1024px) {
+  .people__name {
+    font-size: 18px;
+    line-height: 21px;
+    margin-bottom: 4px;
+  }
+}
+@media (max-width: 767px) {
+  .people__name {
+    font-size: 18px;
+    line-height: 21px;
+    margin-bottom: 5px;
+  }
+}
+.people__position {
+  font-size: 18px;
+  line-height: 21px;
+  margin-bottom: 18px;
+  text-transform: uppercase;
+  color: #ff4343;
+}
+@media (max-width: 1024px) {
+  .people__position {
+    font-size: 14px;
+    line-height: 16px;
+    margin-bottom: 22px;
+  }
+}
+@media (max-width: 767px) {
+  .people__position {
+    font-size: 14px;
+    line-height: 16px;
+    margin-bottom: 38px;
+  }
+}
+.people__text {
+  font-size: 18px;
+  line-height: 21px;
+  color: #6c7279;
+  margin-bottom: 38px;
+}
+@media (max-width: 1024px) {
+  .people__text {
+    font-size: 14px;
+    line-height: 16px;
+    margin-bottom: 39px;
+  }
+}
+@media (max-width: 767px) {
+  .people__text {
+    font-size: 14px;
+    line-height: 16px;
+    margin-bottom: 55px;
+  }
+}
+.people__link {
+  width: 39px;
+  height: 39px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.1s ease;
+  border: 1px solid #C6CBCD;
+}
+@media (max-width: 1024px) {
+  .people__link {
+    -moz-column-gap: 4px;
+         column-gap: 4px;
+    margin-bottom: 78px;
+  }
+}
+@media (max-width: 767px) {
+  .people__link {
+    -moz-column-gap: 5px;
+         column-gap: 5px;
+    margin-bottom: 49px;
+  }
+}
+.people__link:hover {
+  transform: scale(1.2);
 }/*# sourceMappingURL=style.css.map */
