add testimonials and download

--- a/style/style.css
+++ b/style/style.css
@@ -524,7 +524,7 @@ body {
   align-items: center;
   justify-content: center;
   transition: all 0.1s ease;
-  border: 1px solid #C6CBCD;
+  border: 1px solid #c6cbcd;
 }
 @media (max-width: 1024px) {
   .people__link {
@@ -542,4 +542,204 @@ body {
 }
 .people__link:hover {
   transform: scale(1.2);
+}
+
+@media (max-width: 1024px) {
+  .testimonials {
+    max-width: 1024px;
+  }
+}
+@media (max-width: 767px) {
+  .testimonials {
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+  }
+}
+.testimonials__swiper {
+  padding: 0 0 45px;
+}
+.testimonials__swiper .swiper-pagination {
+  bottom: 0;
+  display: flex;
+  -moz-column-gap: 25px;
+       column-gap: 25px;
+  justify-content: center;
+}
+
+#testimonials .swiper-pagination-bullet {
+  width: 14px;
+  height: 14px;
+  border: 1px solid #7e5d6f;
+  border-radius: 50%;
+  background-color: transparent;
+  margin: 0;
+  opacity: 1;
+}
+#testimonials .swiper-pagination-bullet-active {
+  background-color: #7e5d6f;
+}
+
+.testimonial {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  -moz-column-gap: 31px;
+       column-gap: 31px;
+  background-color: #7e5d6f;
+  padding: 0 20px;
+}
+@media (max-width: 767px) {
+  .testimonial {
+    grid-template-columns: 1fr;
+  }
+}
+.testimonial__wrapper-photo {
+  aspect-ratio: 570/490;
+  display: flex;
+}
+.testimonial__photo {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.testimonial__quote {
+  padding: 40px 0;
+  color: #fff;
+}
+@media (max-width: 1024px) {
+  .testimonial__quote {
+    color: #fff;
+  }
+}
+
+.quote__text {
+  font-family: "Cardo", serif;
+  font-size: 36px;
+  line-height: 49px;
+  font-style: italic;
+  text-transform: capitalize;
+  margin-bottom: 144px;
+  color: #fff;
+}
+@media (max-width: 1024px) {
+  .quote__text {
+    font-size: 24px;
+    line-height: 32px;
+  }
+}
+@media (max-width: 767px) {
+  .quote__text {
+    margin-bottom: 15px;
+  }
+}
+.quote__autor {
+  font-size: 36px;
+  line-height: 49px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #fff;
+}
+@media (max-width: 1024px) {
+  .quote__autor {
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 700;
+  }
+}
+@media (max-width: 767px) {
+  .quote__autor {
+    margin-bottom: 95px;
+  }
+}
+
+.download__container {
+  padding: 132px 0 114px;
+  text-align: center;
+}
+@media (max-width: 1024px) {
+  .download__container {
+    padding: 94px 0 78px;
+  }
+}
+@media (max-width: 767px) {
+  .download__container {
+    padding: 65px 0 45px;
+  }
+}
+.download__title {
+  font-size: 30px;
+  line-height: 35px;
+  font-weight: 500;
+  margin-bottom: 22px;
+}
+@media (max-width: 1024px) {
+  .download__title {
+    font-size: 24px;
+    line-height: 28px;
+    margin-bottom: 21px;
+  }
+}
+@media (max-width: 767px) {
+  .download__title {
+    font-size: 18px;
+    line-height: 21px;
+    margin-bottom: 11px;
+  }
+}
+.download__subtitle {
+  font-size: 18px;
+  line-height: 21px;
+  margin-bottom: 50px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+@media (max-width: 1024px) {
+  .download__subtitle {
+    font-size: 14px;
+    line-height: 16px;
+    margin-bottom: 46px;
+  }
+}
+@media (max-width: 767px) {
+  .download__subtitle {
+    font-size: 13px;
+    line-height: 15px;
+    margin-bottom: 13px;
+  }
+}
+.download__btn {
+  font-size: 24px;
+  line-height: 28px;
+  color: #fff;
+  font-weight: 900;
+  text-transform: uppercase;
+  background-color: #ff4343;
+  padding: 26px;
+  display: block;
+  max-width: 370px;
+  text-decoration: none;
+  margin: 0 auto;
+  transition: all 0.2s linear;
+}
+.download__btn:hover {
+  background-color: #b71013;
+  transform: scale(1.05);
+}
+@media (max-width: 1024px) {
+  .download__btn {
+    max-width: 313px;
+    padding: 29px;
+    font-size: 18px;
+    line-height: 21px;
+  }
+}
+@media (max-width: 767px) {
+  .download__btn {
+    max-width: 280px;
+    padding: 29px;
+    font-size: 18px;
+    line-height: 21px;
+  }
 }/*# sourceMappingURL=style.css.map */
