--- a/style/style.css
+++ b/style/style.css
@@ -742,4 +742,42 @@ body {
     font-size: 18px;
     line-height: 21px;
   }
+}
+
+.contact__container {
+  padding: 71px 0 67px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+  text-align: center;
+}
+.contact__location-title {
+  font-size: 18px;
+  line-height: 21px;
+  font-weight: 700;
+  margin-bottom: 29px;
+  max-width: 370px;
+  text-transform: uppercase;
+}
+.contact__location-text {
+  font-size: 18px;
+  line-height: 21px;
+  max-width: 370px;
+}
+.contact__share-title {
+  font-size: 18px;
+  line-height: 21px;
+  font-weight: 700;
+  margin-bottom: 49px;
+  max-width: 370px;
+  text-transform: uppercase;
+}
+.contact__link {
+  width: 39px;
+  height: 39px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #c6cbcd;
 }/*# sourceMappingURL=style.css.map */
