--- a/style/style.css
+++ b/style/style.css
@@ -356,6 +356,7 @@ body {
   font-weight: 900;
   text-transform: uppercase;
   margin-bottom: 36px;
+  color: #fff;
 }
 @media (max-width: 1024px) {
   .project__title {
@@ -374,6 +375,7 @@ body {
 .project__text {
   font-size: 18px;
   line-height: 21px;
+  color: #fff;
 }
 @media (max-width: 1024px) {
   .project__text {
@@ -390,6 +392,16 @@ body {
 
 .persons {
   padding: 114px 0;
+}
+@media (max-width: 1024px) {
+  .persons {
+    padding: 78px 0;
+  }
+}
+@media (max-width: 767px) {
+  .persons {
+    padding: 49px 0;
+  }
 }
 .persons__container {
   display: grid;
@@ -410,15 +422,12 @@ body {
   }
 }
 
-.people__content {
-  aspect-ratio: 270/270;
-}
 .people__image {
   width: 100%;
-  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   margin-bottom: 31px;
+  aspect-ratio: 270/270;
 }
 @media (max-width: 1024px) {
   .people__image {
@@ -431,28 +440,21 @@ body {
   }
 }
 .people__list {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: flex;
   -moz-column-gap: 6px;
        column-gap: 6px;
   list-style: none;
   display: flex;
-  margin-bottom: 114px;
 }
 @media (max-width: 1024px) {
   .people__list {
     -moz-column-gap: 4px;
          column-gap: 4px;
-    margin-bottom: 78px;
   }
 }
 @media (max-width: 767px) {
   .people__list {
     -moz-column-gap: 5px;
          column-gap: 5px;
-    margin-bottom: 49px;
   }
 }
 .people__name {
@@ -544,18 +546,6 @@ body {
   transform: scale(1.2);
 }
 
-@media (max-width: 1024px) {
-  .testimonials {
-    max-width: 1024px;
-  }
-}
-@media (max-width: 767px) {
-  .testimonials {
-    flex-direction: column;
-    align-items: center;
-    gap: 25px;
-  }
-}
 .testimonials__swiper {
   padding: 0 0 45px;
 }
@@ -581,8 +571,8 @@ body {
 }
 
 .testimonial {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  justify-content: center;
   align-items: center;
   -moz-column-gap: 31px;
        column-gap: 31px;
@@ -591,12 +581,13 @@ body {
 }
 @media (max-width: 767px) {
   .testimonial {
-    grid-template-columns: 1fr;
+    flex-direction: column;
   }
 }
 .testimonial__wrapper-photo {
   aspect-ratio: 570/490;
   display: flex;
+  max-width: 570px;
 }
 .testimonial__photo {
   width: 100%;
@@ -607,6 +598,7 @@ body {
 .testimonial__quote {
   padding: 40px 0;
   color: #fff;
+  max-width: 570px;
 }
 @media (max-width: 1024px) {
   .testimonial__quote {
@@ -620,7 +612,7 @@ body {
   line-height: 49px;
   font-style: italic;
   text-transform: capitalize;
-  margin-bottom: 144px;
+  margin-bottom: 17px;
   color: #fff;
 }
 @media (max-width: 1024px) {
@@ -635,8 +627,8 @@ body {
   }
 }
 .quote__autor {
-  font-size: 36px;
-  line-height: 49px;
+  font-size: 13px;
+  line-height: 15px;
   font-weight: 700;
   text-transform: uppercase;
   color: #fff;
@@ -654,17 +646,17 @@ body {
   }
 }
 
-.download__container {
+.download {
   padding: 132px 0 114px;
   text-align: center;
 }
 @media (max-width: 1024px) {
-  .download__container {
+  .download {
     padding: 94px 0 78px;
   }
 }
 @media (max-width: 767px) {
-  .download__container {
+  .download {
     padding: 65px 0 45px;
   }
 }
@@ -744,34 +736,69 @@ body {
   }
 }
 
-.contact__container {
+.contact {
   padding: 71px 0 67px;
+  background-color: #353c65;
+}
+@media (max-width: 1024px) {
+  .contact {
+    padding: 47px 0 41px;
+  }
+}
+@media (max-width: 767px) {
+  .contact {
+    padding: 34px 0 28px;
+  }
+}
+.contact__container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   -moz-column-gap: 30px;
        column-gap: 30px;
   text-align: center;
 }
-.contact__location-title {
+@media (max-width: 1024px) {
+  .contact__container {
+    -moz-column-gap: 20px;
+         column-gap: 20px;
+  }
+}
+@media (max-width: 767px) {
+  .contact__container {
+    grid-template-columns: 1fr;
+    row-gap: 64px;
+  }
+}
+.contact__title {
   font-size: 18px;
   line-height: 21px;
   font-weight: 700;
   margin-bottom: 29px;
-  max-width: 370px;
   text-transform: uppercase;
+  color: #fff;
 }
-.contact__location-text {
+@media (max-width: 1024px) {
+  .contact__title {
+    font-size: 14px;
+    line-height: 16px;
+    margin-bottom: 17px;
+  }
+}
+@media (max-width: 767px) {
+  .contact__title {
+    margin-bottom: 34px;
+  }
+}
+.contact__text {
   font-size: 18px;
   line-height: 21px;
-  max-width: 370px;
+  color: #fff;
 }
-.contact__share-title {
-  font-size: 18px;
-  line-height: 21px;
-  font-weight: 700;
-  margin-bottom: 49px;
-  max-width: 370px;
-  text-transform: uppercase;
+@media (max-width: 1024px) {
+  .contact__text {
+    font-size: 14px;
+    line-height: 16px;
+  }
 }
 .contact__link {
   width: 39px;
@@ -780,4 +807,75 @@ body {
   align-items: center;
   justify-content: center;
   border: 1px solid #c6cbcd;
+}
+@media (max-width: 1024px) {
+  .contact__link {
+    width: 33px;
+    height: 33px;
+  }
+}
+.contact__list {
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+  display: flex;
+  list-style-type: none;
+  justify-content: center;
+  margin-top: 49px;
+}
+@media (max-width: 1024px) {
+  .contact__list {
+    -moz-column-gap: 22px;
+         column-gap: 22px;
+  }
+}
+@media (max-width: 767px) {
+  .contact__list {
+    -moz-column-gap: 16px;
+         column-gap: 16px;
+  }
+}
+
+.author {
+  padding: 24px 0;
+  background-color: #2c3154;
+}
+@media (max-width: 1024px) {
+  .author {
+    padding: 14px 0;
+  }
+}
+@media (max-width: 767px) {
+  .author {
+    padding: 30px 0 28px;
+  }
+}
+.author__container {
+  max-width: 410px;
+}
+@media (max-width: 1024px) {
+  .author__container {
+    max-width: 354px;
+  }
+}
+@media (max-width: 767px) {
+  .author__container {
+    max-width: 320px;
+  }
+}
+.author__text {
+  text-align: center;
+  font-size: 18px;
+  line-height: 21px;
+  color: #808080;
+  text-transform: capitalize;
+}
+@media (max-width: 1024px) {
+  .author__text {
+    font-size: 14px;
+    line-height: 16px;
+  }
+}
+.author__name {
+  color: #fff;
+  text-transform: capitalize;
 }/*# sourceMappingURL=style.css.map */
